# ft-gic

./: .dockerignore  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/gic/: devcontainer.json
.devcontainer/isaac-sim/: devcontainer.json
docker/: .env.example  Dockerfile  Dockerfile.gic  docker-compose.yaml  entrypoint.gic.sh  entrypoint.sh  requirements.gic.txt  requirements.txt
docs/: ISSUES.md  PLAN.md  TODO.md
docs/LOGS/: literature-survey.md  log_gic.md  log_rope_sim.md
literature/: README.md  deformable_property_estimation.md  dlo_deformable_manipulation.md
literature/references/: main.md
scripts/: _check_camera.py  analyze_segments.py  calibrate_drive.py  hang_rope.py  oscillate_rope.py  record_rope.py  run_gui.sh  run_headless.sh  run_record.sh  run_swing.sh  swing_rope.py
src/rope_sim/: camera_utils.py  rope_builder.py  scene_utils.py  sim_utils.py  video_utils.py
